--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head> 
 <body> 
     <header> 
-        <h1>Welcome to [Ongani C. Zulu, 2021391060] Website</h1> 
+        <h1>Welcome to [Ongani C. Zulu, 2021391060] Website</h1>
+        <h2>Group Partner Chimwemwe Kamanga, 2021394859 </h2>
         <nav> 
             <a href="#">Home</a> |  
             <a href="#">About</a> |  
